src/objects/Associated_Contact__c.object
<CustomObject>
    <description>This is a junction object between Controlled Documents and Contacts. This is part of the Controlled Document Tracker object.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CDT Associated Contacts</relationshipLabel>
        <relationshipName>CDT_Associated_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Controlled_Document__c</fullName>
        <label>Controlled Document</label>
        <referenceTo>Controlled_Document__c</referenceTo>
        <relationshipLabel>Associated Contacts</relationshipLabel>
        <relationshipName>Associated_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitter</fullName>
                </value>
                <value>
                    <fullName>Recipient</fullName>
                </value>
                <value>
                    <fullName>Constituent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Associated Contact</label>
    <nameField>
        <displayFormat>AC{000000}</displayFormat>
        <label>Associated Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>